--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "manifest_version": 3,
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "scripts/background.js"
     },
     "permissions": ["storage", "webNavigation", "scripting"],
     "host_permissions": [
@@ -14,10 +14,10 @@
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
-            "128": "./icon.png"
+            "128": "./assets/icon.png"
         }
     },
     "icons": {
-        "128": "./icon.png"
+        "128": "./assets/icon.png"
     }
 }
